# rune

./: .gitignore  CONTRIBUTING.md  LICENSE  LLM Master Prompt Rehberi Oluşturma.md  Master Prompt Template v4.0.md  Master Prompt Template v4.2.md  Master Prompt Template v4.3.md  Master Prompt Template v4.4.md  README.md  RUNE-SWARM.md  RUNE.md  cross_model_test.py  mp.py  pyproject.toml  ric_identity.md  swarm.py  wand.py
demo/: index.html  rune-demo.html
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  LEGACY_ANALYSIS.md  NAMING_EN.md  QUICKSTART.md  ROADMAP_IDEAS.md  RUNE_V2_PLAN.md  RUNE_WAND_PITCH.md  STRATEGY_FAQ.md  image-prompts.md
examples/: README.md
legacy/: Master Prompt Template v4.1.md
prompts/: 01_shader_debug.md  02_ui_polish.md  03_performance_audit.md  04_feature_roadmap.md  05_code_review.md  06_bug_rca.md  07_refactoring.md  08_test_generation.md  09_api_design.md  10_documentation.md  11_coding_api_design_rest.md  12_coding_code_review_security.md  13_coding_debug_systematic.md  14_coding_architecture_design.md  15_coding_database_schema.md  16_coding_cicd_pipeline.md  17_writing_blog_post.md  18_writing_pitch_deck.md  19_writing_technical_doc.md  20_writing_email_outreach.md  21_writing_social_media.md  22_writing_storytelling.md  23_analysis_competitor.md  24_analysis_swot.md  25_analysis_data.md  26_analysis_market_research.md  27_analysis_financial_model.md  28_analysis_user_research.md  29_creative_brainstorm.md  30_creative_naming.md  31_creative_design_brief.md  32_creative_game_design.md  33_creative_music_composition.md  34_creative_ux_flow.md  35_aiml_model_evaluation.md  36_aiml_dataset_curation.md  37_aiml_prompt_chain.md  38_aiml_agent_design.md  (+6 more)
(+46 files in other folders)
