[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rune-wand"
dynamic = ["version"]
description = "Every prompt is a spell. RUNE transforms ambiguous prompts into structured, 8-layer directives validated by Spinoza's philosophy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mustafa Saraç", email = "mustafa@neurabytelabs.com" },
]
keywords = ["prompt-engineering", "llm", "ai", "cli", "spinoza"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
wand = "rune.cli.main:main"

[project.urls]
Homepage = "https://github.com/neurabytelabs/rune"
Repository = "https://github.com/neurabytelabs/rune"
Documentation = "https://github.com/neurabytelabs/rune/blob/main/docs/QUICKSTART.md"
Issues = "https://github.com/neurabytelabs/rune/issues"

[tool.hatch.version]
path = "rune/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["rune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
